--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -16,6 +16,7 @@
 		"facility": "SOCIB:Facility",
 		"organization": "FOAF:Organization",
 		"platform": "SOSA:Platform",
+		"program": "SCHEMA:ProgramMembership",
 		"project": "FOAF:Project",
 		"person": "FOAF:Person",
 		"relation": "DCAT:RelationShip",
@@ -45,7 +46,7 @@
 		"facility":"SOCIB:hasFacility",
 		"organization": "SOCIB:hasOrganization",
 		"platform": "SOCIB:hasPlatform",
-		"program": "SCHEMA:memmberOf",
+		"program": "SCHEMA:memberOf",
 		"project": "SOCIB:hasProject",
 		"person": "SOCIB:hasPerson",
 		"relation": "DCT:relation",
