--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -15,6 +15,7 @@
 		"facility": "EJERICO:Facility",
 		"organization": "FOAF:Organization",
 		"platform": "SOSA:Platform",
+		"program": "SCHEMA:ProgramMembership",
 		"project": "FOAF:Project",
 		"person": "FOAF:Person",
 		"relation": "DCAT:RelationShip",
@@ -44,6 +45,7 @@
 		"facility":"EJERICO:hasFacility",
 		"organization": "EJERICO:hasOrganization",
 		"platform": "EJERICO:hasPlatform",
+		"program": "SCHEMA:memberOf",
 		"project": "EJERICO:hasProject",
 		"person": "EJERICO:hasPerson",
 		"relation": "DCT:relation",
