--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -24,7 +24,6 @@
 		"service": "SCHEMA:Service",
 		"software": "SCHEMA:SoftwareApplication",
 		"softwaresource": "SCHEMA:SoftwareSource",
-		"source": "EPOS:source",
 		"temporal": "DCT:PeriodOfTime",
 		"vcard": "VCARD:Address",
 		"variable": "SCHEMA:PropertyValue",
@@ -86,6 +85,8 @@
 		"id": "DCT:identifier",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
+		"harverted_source": "EPOS:source",
+		"harverted_timestamp": "EPOS:updated",
 		"keywords": "SCHEMA:keywords",
 		"knows": "FOAF:knows",
 		"label": "RDFS:label",
