--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -11,7 +11,7 @@
 		"dataset": "DCAT:Dataset",
 		"datasetvariable": "BODC:A05",
 		"distribution": "DCAT:Distribution",
-		"document": "SCHEMA:digitalDocument",
+		"document": "SCHEMA:DigitalDocument",
 		"equipment":"EJERICO:Equipment",
 		"facility": "EJERICO:Facility",
 		"organization": "FOAF:Organization",
