--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -11,7 +11,7 @@
 		"dataset": "DCAT:Dataset",
 		"datasetvariable": "BODC:A05",
 		"distribution": "DCAT:Distribution",
-		"document": "SCHEMA:digitalDocument",
+		"document": "SCHEMA:DigitalDocument",
 		"equipment":"SOCIB:Equipment",
 		"facility": "SOCIB:Facility",
 		"organization": "FOAF:Organization",
