--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -19,12 +19,12 @@
 		"program": "SCHEMA:ProgramMembership",
 		"project": "FOAF:Project",
 		"person": "FOAF:Person",
-		"relation": "DCAT:RelationShip",
+		"relation": "DCAT:Relationship",
 		"spatial": "DCT:Location",
 		"sensor": "SOSA:Sensor",
 		"service": "SCHEMA:Service",
 		"software": "SCHEMA:SoftwareApplication",
-		"softwaresource": "SCHEMA:SoftwareSource",
+		"softwaresource": "SCHEMA:SoftwareSourceCode",
 		"temporal": "DCT:PeriodOfTime",
 		"vcard": "VCARD:Address",
 		"variable": "SCHEMA:PropertyValue",
@@ -83,7 +83,7 @@
 		"familyName": "SCHEMA:familyName",
 		"fax": "SCHEMA:faxNumber",
 		"filter": "SOCIB:filter",
-		"format": "SCHEMA:format",
+		"format": "SCHEMA:fileFormat",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
 		"issn": "SCHEMA:issn",
@@ -107,13 +107,13 @@
 		"owner": "PROV:wasAttributedTo",
 		"orientation": "SOCIB:orientation",
 		"page": "FOAF:page",
-		"pages": "SCHEMA:numberOfPage",
+		"pages": "SCHEMA:numberOfPages",
 		"parent": "SOCIB:memberOf",
 		"period": "SOCIB:samplePeriod",
 		"phone": "SCHEMA:telephone",
 		"produces": "SCHEMA:produces",
 		"processing_level": "SOCIB:processingLevel",
-		"provenance": "DCT:provenanceStatement",
+		"provenance": "DCT:ProvenanceStatement",
 		"provider": "SCHEMA:provider",
 		"publisher": "DCT:publisher",
 		"published": "DCT:issued",
