--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -18,12 +18,12 @@
 		"program": "SCHEMA:ProgramMembership",
 		"project": "FOAF:Project",
 		"person": "FOAF:Person",
-		"relation": "DCAT:RelationShip",
+		"relation": "DCAT:Relationship",
 		"spatial": "DCT:Location",
 		"sensor": "SOSA:Sensor",
 		"service": "SCHEMA:Service",
 		"software": "SCHEMA:SoftwareApplication",
-		"softwaresource": "SCHEMA:SoftwareSource",
+		"softwaresource": "SCHEMA:SoftwareSourceCode",
 		"temporal": "DCT:PeriodOfTime",
 		"vcard": "VCARD:Address",
 		"variable": "SCHEMA:PropertyValue",
@@ -80,7 +80,7 @@
 		"email": "SCHEMA:email",
 		"familyname": "SCHEMA:familyName",
 		"filter": "EPOS:filter",
-		"format": "SCHEMA:format",
+		"format": "SCHEMA:fileFormat",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
 		"issn": "SCHEMA:issn",
@@ -105,12 +105,12 @@
 		"owner": "PROV:wasAttributedTo",
 		"orientation": "EPOS:orientation",
 		"page": "FOAF:page",
-		"pages": "SCHEMA:numberOfPage",
+		"pages": "SCHEMA:numberOfPages",
 		"parent": "EPOS:memberOf",
 		"period": "EPOS:samplePeriod",
 		"phone": "SCHEMA:telephone",
 		"processing_level": "EPOS:processingLevel",
-		"provenance": "DCT:provenanceStatement",
+		"provenance": "DCT:ProvenanceStatement",
 		"provider": "SCHEMA:provider",
 		"publisher": "DCT:publisher",
 		"published": "DCT:issued",
