--- a/epos/address_entity_mapping.json
+++ b/epos/address_entity_mapping.json
@@ -6,7 +6,7 @@
         "locality": "SCHEMA:addressLocality",
         "postal_code": "SCHEMA:postalCode",
         "country": "SCHEMA:addressCountry",
-        "region": "SCHEMA:regionAddress"
+        "region": "SCHEMA:addressRegion"
 	},
 	"alias": {
 	}
