--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -88,9 +88,9 @@
 		"id": "DCT:identifier",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
-		"harverted_hash": "EJERICO:hash",
-		"harverted_source": "EJERICO:source",
-		"harverted_timestamp": "EJERICO:updated",
+		"harvested_hash": "EJERICO:hash",
+		"harvested_source": "EJERICO:source",
+		"harvested_timestamp": "EJERICO:updated",
 		"keywords": "SCHEMA:keywords",
 		"knows": "FOAF:knows",
 		"label": "RDFS:label",
