--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -85,9 +85,9 @@
 		"id": "DCT:identifier",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
-		"harverted_hash": "EPOS:hash",
-		"harverted_source": "EPOS:source",
-		"harverted_timestamp": "EPOS:updated",
+		"harvested_hash": "EPOS:hash",
+		"harvested_source": "EPOS:source",
+		"harvested_timestamp": "EPOS:updated",
 		"keywords": "SCHEMA:keywords",
 		"knows": "FOAF:knows",
 		"label": "RDFS:label",
