--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -124,13 +124,14 @@
 		"serial": "SCHEMA:serialNumber",
 		"search_terms": "EJERICO:searchTerms",
 		"size": "SCHEMA:size",
+		"source": "EJERICO:source",
 		"start_date": "SCHEMA:startDate",
 		"rigths": "DCT:rights",
 		"text_value": "SCHEMA:textValue",
 		"theme": "DCAT:themeTaxonomy",
 		"title": "DCT:title",
 		"type": "DCT:type",	
-		"updated": "DCT:modified",
+		"updated": "EJERICO:updated",
 		"url": "SCHEMA:url",
 		"version": "DCT:hasVersion"
 	},
