--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -120,13 +120,14 @@
 		"responsible": "PROV:wasAssociatedWith",
 		"serial": "SCHEMA:serialNumber",
 		"size": "SCHEMA:size",
+		"source": "EPOS:source",
 		"start_date": "SCHEMA:startDate",
 		"rigths": "DCT:rights",
 		"text_value": "SCHEMA:textValue",
 		"theme": "DCAT:themeTaxonomy",
 		"title": "DCT:title",
 		"type": "DCT:type",	
-		"updated": "DCT:modified",
+		"updated": "EPOS:updated",
 		"url": "SCHEMA:url",
 		"version": "DCT:hasVersion"
 	},
