--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -125,12 +125,13 @@
 		"search_terms": "SOCIB:searchTerms",
 		"size": "SCHEMA:size",
 		"start_date": "SCHEMA:startDate",
+		"source": "SOCIB:source",
 		"rigths": "DCT:rights",
 		"text_value": "SCHEMA:textValue",
 		"theme": "DCAT:themeTaxonomy",
 		"title": "DCT:title",
 		"type": "DCT:type",	
-		"updated": "DCT:modified",
+		"updated": "SOCIB:updated",
 		"url": "SCHEMA:url",
 		"version": "DCT:hasVersion"
 	},
