--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -83,6 +83,7 @@
 		"format": "SCHEMA:fileFormat",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
+		"is_related_to": "SCHEMA:isRelatedTo",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
 		"harvested_hash": "EPOS:hash",
