--- a/ejerico/document_entity_mapping.json
+++ b/ejerico/document_entity_mapping.json
@@ -3,6 +3,7 @@
     },
 	"properties": {
 		"abstract": "EJERICO:abstract",
+		"audience": "SCHEMA:audience",
 		"catalog": "EJERICO:catalog",
 		"citation": "EJERICO:citation",
 		"contributor": "EJERICO:contributor",
