--- a/socib/document_entity_mapping.json
+++ b/socib/document_entity_mapping.json
@@ -3,6 +3,7 @@
     },
 	"properties": {
 		"abstract": "SOCIB:abstract",
+		"audience": "SCHEMA:audience",
 		"catalog": "SOCIB:catalog",
 		"citation": "SOCIB:citation",
 		"contributor": "SOCIB:contributor",
