--- a/ejerico/address_entity_mapping.json
+++ b/ejerico/address_entity_mapping.json
@@ -1,13 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "street_address": "SCHEMA:streetAddress",
-        "locality": "SCHEMA:addressLocality",
-        "postal_code": "SCHEMA:postalCode",
-        "country": "SCHEMA:addressCountry",
-        "region": "SCHEMA:addressRegion"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"street_address": "SCHEMA:streetAddress", "locality": "SCHEMA:addressLocality", "postal_code": "SCHEMA:postalCode", "country": "SCHEMA:addressCountry", "region": "SCHEMA:addressRegion"}, "alias": {}}
