--- a/ejerico/api_entity_mapping.json
+++ b/ejerico/api_entity_mapping.json
@@ -1,9 +1,1 @@
-{
-	"classes": {},
-	"properties": {
-		"operation": "HYDRA:supportedOperation",
-		"status_code": "HYDRA:HYDRA:statusCode",
-		"url": "HYDRA:entrypoint"
-	},
-	"alias": {}
-}
+{"classes": {}, "properties": {"operation": "HYDRA:supportedOperation", "status_code": "HYDRA:HYDRA:statusCode", "url": "HYDRA:entrypoint"}, "alias": {}}
