--- a/ejerico/api_operation_entity_mapping.json
+++ b/ejerico/api_operation_entity_mapping.json
@@ -1,9 +1,1 @@
-{
-	"classes": {},
-	"properties": {
-		"method": "HYDRA:method",
-		"parameter": "HTTP:paramValue",
-		"url": "HYDRA:entrypoint"
-	},
-	"alias": {}
-}
+{"classes": {}, "properties": {"method": "HYDRA:method", "parameter": "HTTP:paramValue", "url": "HYDRA:entrypoint"}, "alias": {}}
