--- a/ejerico/distribution_entity_mapping.json
+++ b/ejerico/distribution_entity_mapping.json
@@ -1,8 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "mimetype": "DCAT:mediaType",
-        "bytesize": "DCAT:byteSize"
-	}
-}
+{"classes": {}, "properties": {"mimetype": "DCAT:mediaType", "bytesize": "DCAT:byteSize"}}
