--- a/ejerico/equipment_entity_mapping.json
+++ b/ejerico/equipment_entity_mapping.json
@@ -1,12 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "servicetype": "SCHEMA:serviceType",
-        "termsofservice": "SCHEMA:termsOfService",
-        "software": "DCT:requires",
-        "project": "PROV:wasGeneratedBy"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"servicetype": "SCHEMA:serviceType", "termsofservice": "SCHEMA:termsOfService", "software": "DCT:requires", "project": "PROV:wasGeneratedBy"}, "alias": {}}
