--- a/ejerico/organization_entity_mapping.json
+++ b/ejerico/organization_entity_mapping.json
@@ -1,13 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "lei_code": "SCHEMA:leiCode",
-        "servicetype": "SCHEMA:serviceType",
-        "termsofservice": "SCHEMA:termsOfService",
-        "software": "DCT:requires",
-        "project": "PROV:wasGeneratedBy"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"lei_code": "SCHEMA:leiCode", "servicetype": "SCHEMA:serviceType", "termsofservice": "SCHEMA:termsOfService", "software": "DCT:requires", "project": "PROV:wasGeneratedBy"}, "alias": {}}
