--- a/ejerico/service_entity_mapping.json
+++ b/ejerico/service_entity_mapping.json
@@ -1,12 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "service_type": "SCHEMA:serviceType",
-        "terms_of_service": "SCHEMA:termsOfService",
-        "software": "DCT:requires",
-        "project": "PROV:wasGeneratedBy"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"service_type": "SCHEMA:serviceType", "terms_of_service": "SCHEMA:termsOfService", "software": "DCT:requires", "project": "PROV:wasGeneratedBy"}, "alias": {}}
