--- a/ejerico/spatial_entity_mapping.json
+++ b/ejerico/spatial_entity_mapping.json
@@ -1,21 +1,1 @@
-{
-	"classes": {
-	},
-	"properties": {
-		"responsible": "PROV:wasAssociatedWith",
-		"geometry": "LOCN:geometry",
-		"name": "LOCN:geographicName",
-		"address": "LOCN:Address",
-		"latitude": "SCHEMA:latitude",
-		"longitude": "SCHEMA:longitude",
-		"max_latitude": "EJERICO:maxLatitude",
-        "max_longitude": "EJERICO:maxLongitude",
-        "min_latitude": "EJERICO:minLatitude",
-        "min_longitude": "EJERICO:minLongitude",
-		"reference_system": "LOCN:csr",
-        "unit_latitude": "EJERICO:unitLatitude",
-        "unit_longitude": "EJERICO:unitLongitude"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"responsible": "PROV:wasAssociatedWith", "geometry": "LOCN:geometry", "name": "LOCN:geographicName", "address": "LOCN:Address", "latitude": "SCHEMA:latitude", "longitude": "SCHEMA:longitude", "max_latitude": "EJERICO:maxLatitude", "max_longitude": "EJERICO:maxLongitude", "min_latitude": "EJERICO:minLatitude", "min_longitude": "EJERICO:minLongitude", "reference_system": "LOCN:csr", "unit_latitude": "EJERICO:unitLatitude", "unit_longitude": "EJERICO:unitLongitude"}, "alias": {}}
