--- a/ejerico/temporal_entity_mapping.json
+++ b/ejerico/temporal_entity_mapping.json
@@ -1,10 +1,1 @@
-{
-	"classes": {
-	},
-	"properties": {
-		"end_date": "SCHEMA:endDate",
-		"start_date": "SCHEMA:startDate"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"end_date": "SCHEMA:endDate", "start_date": "SCHEMA:startDate"}, "alias": {}}
