--- a/ejerico/variable_entity_mapping.json
+++ b/ejerico/variable_entity_mapping.json
@@ -1,18 +1,1 @@
-{
-	"classes": {
-	},
-	"properties": {
-		"alternate_name": "SCHEMA:alternateName",
-        "max_value": "SCHEMA:maxValue",
-		"measurement_technique": "SCHEMA:measurementTechnique",
-		"min_value": "SCHEMA:minValue",
-		"name": "SCHEMA:name",
-        "propertyID": "SCHEMA:propertyID",
-        "unit_code": "SCHEMA:unitCode",
-        "unit_text": "SCHEMA:unitText",
-        "value": "SCHEMA:value",
-		"value_reference": "SCHEMA:valueReference"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"alternate_name": "SCHEMA:alternateName", "max_value": "SCHEMA:maxValue", "measurement_technique": "SCHEMA:measurementTechnique", "min_value": "SCHEMA:minValue", "name": "SCHEMA:name", "propertyID": "SCHEMA:propertyID", "unit_code": "SCHEMA:unitCode", "unit_text": "SCHEMA:unitText", "value": "SCHEMA:value", "value_reference": "SCHEMA:valueReference"}, "alias": {}}
