--- a/ejerico/web_service_entity_mapping.json
+++ b/ejerico/web_service_entity_mapping.json
@@ -1,7 +1,1 @@
-{
-	"classes": {},
-	"properties": {
-		"api": "EJERICO:hasApi"
-	},
-	"alias": {}
-}
+{"classes": {}, "properties": {"api": "EJERICO:hasApi"}, "alias": {}}
