--- a/epos/dataset_entity_mapping.json
+++ b/epos/dataset_entity_mapping.json
@@ -17,6 +17,6 @@
         "theme": "DCAT:theme",
         "user": "PROV:wasUsedBy",
         "processing_level": "EPOS:processingLevel",
-        "service": "DCAT:distribution"
+        "service": "DCAT:service"
 	}
 }
