--- a/ejerico/catalog_entity_mapping.json
+++ b/ejerico/catalog_entity_mapping.json
@@ -1,12 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "catalog": "DCAT:catalog",
-        "dataset": "DCAT:dataset",
-        "service": "DCAT:service",
-        "theme": "DCAT:themeTaxonomy",
-        "url": "FOAF:homepage",
-        "project": "PROV:wasGeneratedBy"
-	}
-}
+{"classes": {}, "properties": {"catalog": "DCAT:catalog", "dataset": "DCAT:dataset", "service": "DCAT:service", "theme": "DCAT:themeTaxonomy", "url": "FOAF:homepage", "project": "PROV:wasGeneratedBy"}}
