--- a/ejerico/document_entity_mapping.json
+++ b/ejerico/document_entity_mapping.json
@@ -1,16 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-		"abstract": "EJERICO:abstract",
-		"catalog": "EJERICO:catalog",
-		"citation": "EJERICO:citation",
-		"contributor": "EJERICO:contributor",
-		"type": "EJERICO:kind",
-		"volume": "SCHEMA:volumeNumber"	
-	},
-	"alias": {
-	}
-}
-
-
+{"classes": {}, "properties": {"abstract": "EJERICO:abstract", "audience": "SCHEMA:audience", "catalog": "EJERICO:catalog", "citation": "EJERICO:citation", "contributor": "EJERICO:contributor", "type": "EJERICO:kind", "volume": "SCHEMA:volumeNumber"}, "alias": {}}
