--- a/ejerico/software_entity_mapping.json
+++ b/ejerico/software_entity_mapping.json
@@ -1,16 +1,1 @@
-{
-	"classes": {},
-	"properties": {
-		"distribution": "DCAT:distribution",
-		"memory_requirements": "SCHEMA:memoryRequirements",
-		"operating_system": "SCHEMA:operatingSystem",
-		"processor_requirements": "SCHEMA:processorRequirements",
-		"programming_language": "SCHEMA:programmingLanguage",
-		"runtime": "SCHEMA:runtimePlatform",
-		"storage_requirements": "SCHEMA:storageRequirements",
-		"suite": "SCHEMA:applicationSuite",
-		"source": "SCHEMA:codeRepository",
-		"version": "SCHEMA:softwareVersion"
-	},
-	"alias": {}
-}
+{"classes": {}, "properties": {"distribution": "DCAT:distribution", "memory_requirements": "SCHEMA:memoryRequirements", "operating_system": "SCHEMA:operatingSystem", "processor_requirements": "SCHEMA:processorRequirements", "programming_language": "SCHEMA:programmingLanguage", "runtime": "SCHEMA:runtimePlatform", "storage_requirements": "SCHEMA:storageRequirements", "suite": "SCHEMA:applicationSuite", "source": "SCHEMA:codeRepository", "version": "SCHEMA:softwareVersion"}, "alias": {}}
