--- a/ejerico/vcard_entity_mapping.json
+++ b/ejerico/vcard_entity_mapping.json
@@ -1,13 +1,1 @@
-{
-    "classes": {
-    },
-	"properties": {
-        "address": "VCARD:street-address",
-        "country": "VCARD:country",
-        "locality": "VCARD:locality",
-        "postal_code": "VCARD:postal-code",
-        "region": "VCARD:region"
-	},
-	"alias": {
-	}
-}
+{"classes": {}, "properties": {"address": "VCARD:street-address", "country": "VCARD:country", "locality": "VCARD:locality", "postal_code": "VCARD:postal-code", "region": "VCARD:region"}, "alias": {}}
